# tooltrace-inverter

./: .gitignore  CMakeLists.txt  CNAME  README.md  gridfinity_bin.step  index.html  index.js  main.cpp  main.py  pyproject.toml  shell.html  tool_model.stl  worker.js
.github/workflows/: build.yml
